# PostmanPractice

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Credit_card.postman_collection.json  README.md  import_csv.csv  pyproject.toml  remote.postman_environment.json  setup.cfg  start.sh  workspace.postman_globals.json
src/: alembic.ini
src/app/: config.py  service.py
src/app/api/: __init__.py  errors.py  routes.py
src/app/api/endpoints/: auth.py  credit_card.py  user.py
src/app/api/endpoints/healthz/: metrics.py  ready.py  up.py
src/app/api/schemas/: auth.py  common.py  credit_card.py  user.py
src/app/services/: credit_cards.py  photo.py  security.py  users.py
src/app/system/: environment.py  middlewares.py  resources.py
src/app/system/mdw_fastapi/api/: docs.py  route.py
src/app/system/mdw_fastapi/middlewares/: errors.py  metrics.py
src/app/system/mdw_logging/: context.py  moneytransfer.py
src/app/system/mdw_prometheus_metrics/: __init__.py
src/app/system/mdw_prometheus_metrics/service/: collector.py  external.py  labels.py
src/config/: config.yml
src/migrations/: env.py  script.py.mako
src/migrations/versions/: 1690188292-213173bb93a7_added_tables.py
src/tests/: conftest.py  utils.py
src/tests/integration/credit_card/close/: test_activity_metrics.py  (+1 more)
src/tests/integration/healthz/: test_metrics.py  test_ready.py  test_up.py
src/tests/integration/user/: test_handler.py
src/tests/unit/: conftest.py
src/tests/unit/services/: test_credit_card.py  test_photo.py  test_security.py  test_user_service.py
(+3 files in other folders)
